envoyfilter-teaching/envoyfilter/loadblance/loadBalancer/consistentHash/dr-productpage-httpHeaderName.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: productpage
spec:
  host: productpage
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: end-user
