envoyfilter-teaching/envoyfilter/loadblance/loadBalancer/consistentHash/dr-productpage-loadBalancer-consistentHash-httpCookie.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: productpage
spec:
  host: productpage
  subsets:
  - name: v1
    labels:
      version: v1
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: user
          ttl: 0s
