envoyfilter-teaching/envoyfilter/loadblance/loadBalancer/consistentHash/dr-productpage-minimumRingSize.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: productpage
spec:
  host: productpage.istio.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  trafficPolicy:
    loadBalancer:
      consistentHash:
        minimumRingSize: 1
        httpQueryParameterName: test
