envoyfilter-teaching/envoyfilter/loadblance/loadBalancer/consistentHash/dr-productpage-useSourceIp.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: productpage
spec:
  host: productpage
  subsets:
  - name: v1
    labels:
      version: v1
  trafficPolicy:
    loadBalancer:
      consistentHash:
        useSourceIp: true
